--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html >
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>心随你动</title>
+<title>心はあなたに動く</title>
 
 <style type="text/css">
 @font-face {
@@ -30,8 +30,8 @@
 	<div id="content">
 		<div id="code">
 			<span class="comments">/**</span><br />
-			<span class="space"/><span class="comments">*2020—01-25</span><br />
-			<span class="space"/><span class="comments">*新年好</span><br />
+			<span class="space"/><span class="comments">*2020—04-19</span><br />
+			<span class="space"/><span class="comments">*那个蓝孩子来了</span><br />
 			<span class="space"/><span class="comments">*/</span><br />
 			Boy name = <span class="keyword">Liang</span> congcong<br />
 			Girl name = <span class="keyword">Zhu</span> lina<br />
@@ -62,13 +62,13 @@
 			<canvas id="garden"></canvas>
 			<div id="words">
 				<div id="messages">
-					露露，这是我只为你心动的时刻:
+					露露，これはあなたのためだけに心が動く時です:
 					<div id="elapseClock"></div>
 				</div>
 				<div id="loveu">
 					如果可以,我希望在这份<br/>
-					心动上加一个期限<br/>那就是一万年<br/>
-					<!-- <div class="signature">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-聪</div> -->
+					心动上加一个期限<br/>就是一万年<br/>
+					<!-- <div class="signature">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-聪</div> -->
 				</div>
 			</div>
 		</div>
@@ -93,7 +93,7 @@
 var offsetX = $("#loveHeart").width() / 2;
 var offsetY = $("#loveHeart").height() / 2 - 55;
 var together = new Date();
-together.setFullYear(2020, 01, 05);
+together.setFullYear(2020,3,19);
 together.setHours(20);
 together.setMinutes(26);
 together.setSeconds(0);
@@ -123,7 +123,7 @@ if (!document.createElement('canvas').getContext) {
 }
 </script>
 <div style="text-align:center;clear:both">
-<p class='footer2'>如果世界存在最美丽的风景那一定是关于你的一言一行</p>
+<p class='footer2'>世界で一番美しい風景があるなら、きっとあなたの一言一行です。</p>
 
 </div>
 </body>
